# FluidAudio

./: CTC_ZH_CN_BENCHMARK.md  Package.swift  README.md
.github/workflows/: asr-benchmark.yml  cohere-transcribe-test.yml  ctc-zh-cn-benchmark.yml  diarizer-benchmark.yml  kokoro-tts-test.yml  offline-pipeline.yml  parakeet-eou-benchmark.yml  pocket-tts-test.yml  qwen3-asr-benchmark.yml  sortformer-benchmark.yml  swift-format.yml  tests.yml  vad-benchmark.yml
Documentation/: API.md
Documentation/ASR/: ChoosingAnAPI.md
Documentation/TTS/: PocketTTS.md
Scripts/: benchmark_ctc_zh_cn.py  test_ctc_zh_cn_hf.py
Sources/FluidAudio/: DownloadUtils.swift  ModelNames.swift
Sources/FluidAudio/ASR/Cohere/: CohereAsrConfig.swift  CohereAsrManager.swift  CohereAsrModels.swift  CohereMelSpectrogram.swift
Sources/FluidAudio/Diarizer/: DiarizerTimeline.swift
Sources/FluidAudio/Diarizer/LS-EEND/: LSEENDDiarizer.swift  LSEENDInference.swift  LSEENDModelInference.swift  LSEENDPreprocessor.swift  LSEENDTypes.swift
Sources/FluidAudio/TTS/: TtsBackend.swift  TtsModels.swift
Sources/FluidAudioCLI/: FluidAudioCLI.swift
Sources/FluidAudioCLI/Commands/: CohereEncoderTest.swift  CosyVoice3DownloadCommand.swift  CosyVoice3ParityCommand.swift  DiarizationBenchmarkUtils.swift  LSEENDBenchmark.swift  MagpieCommand.swift  TTSCommand.swift
Sources/FluidAudioCLI/DatasetParsers/: AMIKaldiData.swift  DatasetDownloader.swift  JapaneseDatasetDownloader.swift
Tests/FluidAudioTests/CLI/: AMIKaldiDataTests.swift  AMIParserTests.swift  AMIRTTMTests.swift
Tests/FluidAudioTests/Diarizer/: SpeakerEnrollmentTests.swift
Tests/FluidAudioTests/TTS/: KokoroChunkerPhonemeRangesTests.swift  KokoroTokenTimingTests.swift  MultilingualG2PTests.swift  TtsTextPreprocessorCommaTests.swift
mobius/: .gitignore  AGENTS.md  CLAUDE.md  README.md
mobius/.claude/commands/: ane-optimize.md
mobius/Documentation/: ModelConversion.md
mobius/knowledge/: AGENTS.md
mobius/knowledge/audio/: AGENTS.md
mobius/models/speaker-diarization/sortformer-streaming/: MODEL_SPECS.md  README.md  pyproject.toml
mobius/models/speaker-diarization/sortformer-streaming/conversion/: .gitignore  config.py  config.yaml  convert_to_coreml.py  coreml_wrappers.py  main.py
mobius/models/speaker-diarization/sortformer-streaming/conversion/NeMo Sortformer Reference/: sortformer_diar_models.py  sortformer_modules.py  streaming_step_isolated.py
mobius/models/stt/nemotron-speech-streaming-0.6b/coreml/Streaming/: BENCHMARK_RESULTS.md  pyproject.toml
mobius/models/stt/nemotron-speech-streaming-0.6b/coreml/conversion_scripts/: .gitignore  convert_nemotron_streaming.py  individual_components.py  pyproject.toml
mobius/models/stt/parakeet-ctc-0.6b-ja/coreml/: CONVERSION_NOTES.md  README.md  pyproject.toml
mobius/models/stt/parakeet-ctc-0.6b-ja/coreml/benchmark/: benchmark-fleurs-ja.py
mobius/models/stt/parakeet-ctc-0.6b-ja/coreml/conversion/: export-ctc-ja.py  export-full-pipeline.py  individual_components.py
mobius/models/stt/parakeet-ctc-0.6b-ja/coreml/debug/: analyze-pipeline-error.py  inspect-ctc-decoder.py
mobius/models/stt/parakeet-ctc-0.6b-ja/coreml/validation/: validate-ctc-ja.py
mobius/models/stt/parakeet-realtime-eou-120m/coreml/conversion_scripts/: convert-parakeet-eou.py  individual_components.py  pyproject.toml
mobius/models/stt/parakeet-tdt-ctc-110m/coreml/: README.md  convert-coreml.py  convert-tdt-coreml.py  export-ctc-head.py  individual_components.py  pyproject.toml
mobius/models/stt/qwen3-asr-0.6b/coreml/: QWEN3_ASR_COREML.md  README.md  convert-qwen3-asr.py  convert_decoder_fused.py  convert_stateful_decoder.py  pyproject.toml
mobius/models/stt/qwen3-forced-aligner-0.6b/coreml/: README.md  SWIFT_INTEGRATION_BUGS.md  compare-models.py  convert-coreml.py  individual_components.py  problems_encountered.md  pyproject.toml  run_coreml_inference.py
mobius/models/tts/kokoro/coreml/: README.md  pyproject.toml
mobius/models/tts/kokoro/coreml/g2p/: compile-modelc.py  convert-to-coreml.py
mobius/models/tts/kokoro/coreml/multilingual-g2p/: README.md  compile-modelc.py  convert-to-coreml.py  pyproject.toml
mobius/models/tts/magpie/coreml/: build_openjtalk.sh  compile_mlmodelc.py  convert_decoder_prefill.py  convert_decoder_step.py  convert_nanocodec.py  convert_text_encoder.py  export_constants.py  export_local_transformer.py  export_pypinyin.py  export_tokenizer_aliases.py  export_tokenizers.py  generate_coreml.py  generate_pytorch.py  openjtalk_wrapper.cpp  openjtalk_wrapper.h  pyproject.toml
mobius/models/tts/magpie/coreml/traceable/: traceable_decoder_prefill.py  traceable_decoder_step.py  traceable_text_encoder.py
mobius/models/tts/qwen3/coreml/: .gitignore  pyproject.toml
mobius/models/tts/qwen3/coreml/convert/: TRIALS_AND_ERRORS.md  compare_prosody.py  convert_argmax_all.py  convert_argmax_code_decoder.py  convert_argmax_embedders.py  convert_argmax_multi_code_decoder.py  convert_argmax_speech_decoder.py  convert_argmax_text_projector.py  convert_code_predictor_kv.py  convert_decoder.py  convert_lm_decode_v10.py  convert_lm_prefill_v9.py  diagnose_robotic.py  extract_speaker_embedding.py  gen_pytorch_ref.py  inference.py
mobius/models/tts/qwen3/coreml/docs/: 01-model-conversion-issues.md  02-token-and-sampling-issues.md  03-audio-pipeline-issues.md  04-environment-and-build-issues.md  05-swift-integration-issues.md  06-performance-and-inference.md  07-debugging-methodology.md
mobius/models/tts/qwen3/coreml/explore/: explore_code_predictor.py  explore_code_predictor_flow.py  explore_decoder.py  explore_lm.py
mobius/models/tts/qwen3/coreml/test/: generate_audio_official.py  test_bilingual_comparison.py  test_full_pipeline_v10.py  test_official_generate.py  test_pytorch_reference.py  test_v10_cp_pipeline.py  test_v10_diagnostic.py  test_v10_sampled_cp.py
mobius/tools/coreml-cli/: CLAUDE.md  README.md  pyproject.toml
mobius/tools/coreml-cli/src/coreml_cli/: cli.py  compute_plan.py  fallback.py  latency.py  metadata.py  model_loader.py  output.py  private_profiler.py
(+206 files in other folders)
