[project]
name = "streaming-sortformer-coreml"
version = "0.1.0"
description = "CoreML conversion of NVIDIA Streaming Sortformer for Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "coremltools>=7.0",
    "torch>=2.0",
    "torchaudio>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
convert = [
    "nemo_toolkit[asr]>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
