[project]
name = "qwen3-tts-coreml"
version = "0.1.0"
description = "CoreML conversion for Qwen3-TTS-12Hz tokenizer decoder"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "coremltools>=8.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "librosa>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter",
]

[tool.uv]
dev-dependencies = [
    "ipython",
]
