[project]
name = "nemotron-streaming"
version = "0.1.0"
description = "NeMo Nemotron Streaming Reference Implementation"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch>=2.0.0",
    "nemo_toolkit[asr]>=2.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
]

[tool.uv]
dev-dependencies = []
